<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorNegro">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context="com.cubikosolutions.dampgl.ejemplopcpartes.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <ImageView
                android:id="@+id/imgLogoimagen"
                android:layout_width="186dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/logoimagencbk2" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/sobreblanco"
                    android:background="@drawable/edit_text_border"
                    android:text="DNI"
                    android:textColor="@color/colorBlanco"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="40"
                    android:selectAllOnFocus="true"
                    android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtOjo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:drawableLeft="@drawable/candadoblanco"
        app:passwordToggleTint="@color/colorBlanco"
        app:passwordToggleEnabled = "true"
        app:passwordToggleDrawable="@drawable/ojoblanco">

        <EditText
            android:id="@+id/txtContrasena"
            android:background="@drawable/edit_text_border"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:drawableLeft="@drawable/candadoblanco"
            android:text="Contraseña"
            android:textColor="@color/colorBlanco"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:maxLength="10"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Login"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:background="@color/colorVerde"
        android:textColor="@color/colorBlanco"/>




        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</ScrollView>